<resources>
    <string name="app_name">DailyForecastApp</string>

    <string name="bad_request">bad request</string>
    <string name="server_error">"server error "</string>
    <string name="no_internet_connection_error">No internet Connection</string>
    <string name="someting_wrong">Something wrong</string>
    <string name="responseProblem_wrong">Json Error</string>
    <string name="unAuthentication">unauth user</string>
    <string name="not_found">not found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chose_cities">choose a citiy</string>
    <string name="search">search</string>
    <string name="not_data_found">not data found</string>
    <string name="below_data_may_not_accurte_please_try_again_later_to_fetch_accurte_date">below data may not accurte please try again later to fetch accurte date.</string>
    <string name="try_again">try again</string>
</resources>